# TheCodingGame

./: .gitignore  LICENSE  install_darknet.sh
guessing_game/: CMakeLists.txt  package.xml
guessing_game/include/: control_node.hpp  vision_node.hpp
guessing_game/scripts/: guessing_game.py  main.py  speech.py  vision.py
guessing_game/src/: clustering.cpp  vision_node.cpp  visualize.cpp
guessing_game/srv/: image_request.srv
guessing_game_new/scripts/: speech.py  vision.py
imitation_game/: .cproject  .project  CMakeLists.txt  package.xml
imitation_game/launch/: ig.launch
imitation_game/msg/: BlobCenter.msg
imitation_game/scripts/: speech.py  vision.py
imitation_game/src/: control_node.cpp  vision_node.cpp
imitation_game/srv/: blob_center.srv  text_to_speech
